--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" role="document">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -16,7 +14,7 @@
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
-    <div class="card" role="article">
+    <section class="card">
       <div class="box">
         <div class="img-fluid">
           <img
@@ -78,12 +76,12 @@
         </div>
       </div>
 
-      <div class="attribution">
+      <footer class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">Abegunde Timilehin</a>.
-      </div>
-    </div>
+      </footer>
+    </section>
   </body>
 </html>
