--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -14,6 +14,7 @@
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
+    <main>
     <section class="card">
       <div class="box">
         <div class="img-fluid">
@@ -75,13 +76,13 @@
           </div>
         </div>
       </div>
-
+    </section>
+</main>
       <footer class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">Abegunde Timilehin</a>.
       </footer>
-    </section>
   </body>
 </html>
